--- a/atm.css
+++ b/atm.css
@@ -18,7 +18,16 @@ body {
   font-size: 50px;
 }
 
-.account {
+.checkingAccount {
+  background-color: #6C9A74;
+  border: 1px solid #295A33;
+  border-radius: 15px;
+  display: inline-block;
+  margin: 10px;
+  padding: 10px;
+  width: 300px;
+}
+.savingsAccount {
   background-color: #6C9A74;
   border: 1px solid #295A33;
   border-radius: 15px;
