add green/red balance background colors

--- a/atm.css
+++ b/atm.css
@@ -29,7 +29,7 @@ body {
 }
 
 .balance {
-  background-color: #E3E3E3;
+  background-color: #F52F4F;
   border: 1px solid #676767;
   border-radius: 15px;
   font-family: 'Ruluko', sans-serif;
