everything but css working, no bonus yet

--- a/atm.css
+++ b/atm.css
@@ -28,7 +28,7 @@ body {
   width: 300px;
 }
 
-.balance,.balance2 {
+.balance {
   background-color: #E3E3E3;
   border: 1px solid #676767;
   border-radius: 15px;
