--- a/atm.css
+++ b/atm.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Oleo+Script);
-@import url(http://fonts.googleapis.com/css?family=Ruluko);
+/*@import url(http://fonts.googleapis.com/css?family=Oleo+Script);
+@import url(http://fonts.googleapis.com/css?family=Ruluko);*/
 
 body {
   font-family: 'Ruluko', sans-serif;
