--- a/atm.css
+++ b/atm.css
@@ -23,7 +23,7 @@ body {
 	border: 1px solid #295A33;
 	border-radius: 15px;
 	display: inline-block;
-	margin: 10px;
+	margin: 0 10px;
 	padding: 10px;
 	width: 400px;
 }
@@ -41,4 +41,28 @@ body {
 .zero {
 	background-color: #F52F4F;
 	color: #FFFFFF;
+}
+
+.log {
+	border-radius: 15px;
+	display: inline-block;
+	margin: 10px;
+	padding: 10px;
+	width: 860px;
+}
+
+.history {
+	border-collapse: collapse;
+	width: 100%;
+}
+
+.history th {
+	font-weight: bold;
+}
+
+.history th,
+.history td {
+	border-bottom: 1px solid #ddd;
+	padding: 15px;
+	text-align: left;
 }
