--- a/atm.css
+++ b/atm.css
@@ -6,6 +6,10 @@ body {
   margin: 0px auto;
   text-align: center;
   width: 700px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .header {
@@ -18,6 +22,50 @@ body {
   font-size: 50px;
 }
 
+/* temp style
+div {
+  border: 4px solid red;
+}*/
+
+#active {
+  margin: 10px;
+  border: 4px solid #C6E872;
+  padding: 20px;
+  background: #FBFFA3;
+  font-size: 40px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.flexList {
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
+.option {
+  margin: 10px;
+  border: 4px solid #66D37E;
+  padding: 5px;
+  background: #FBFFA3;
+  font-size: 25px;
+}
+
+.option:hover {
+  border: 4px solid #C6E872;
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
+}
+
+/*
 .account {
   background-color: #6C9A74;
   border: 1px solid #295A33;
@@ -42,3 +90,4 @@ body {
   background-color: #F52F4F;
   color: #FFFFFF;
 }
+*/
