Everything is working, overdraft on withdraw works as expected

--- a/atm.css
+++ b/atm.css
@@ -3,7 +3,7 @@
 
 body {
   font-family: 'Ruluko', sans-serif;
-  margin: 0px auto;
+  margin: 0 auto;
   text-align: center;
   width: 700px;
   background-image: url("https://www.colourbox.com/preview/2120061-background-with-the-hundred-dollar-bank-notes.jpg");
