--- a/atm.css
+++ b/atm.css
@@ -6,7 +6,7 @@ body {
   margin: 0px auto;
   text-align: center;
   width: 700px;
-  background-color: ff0000;
+  background-color: #ff0000;
 }
 
 .header {
