--- a/atm.css
+++ b/atm.css
@@ -27,7 +27,6 @@ body {
   padding: 10px;
   width: 300px;
 }
-
 .balance {
   background-color: #E3E3E3;
   border: 1px solid #676767;
@@ -37,6 +36,9 @@ body {
   margin: 5px;
   padding: 5px 45px;
   margin-left: 75px;
+}
+#dollarSign{
+  text-align: left;
 }
 
 .zero {
