add subtract functions work

--- a/atm.css
+++ b/atm.css
@@ -6,6 +6,7 @@ body {
   margin: 0px auto;
   text-align: center;
   width: 700px;
+  background-color: white;
 }
 
 .header {
@@ -40,5 +41,4 @@ body {
 
 .zero {
   background-color: #F52F4F;
-  color: #FFFFFF;
 }
